<resources>
    <string name="app_name">RxPractice</string>
    <string name="drawer_sales">정산</string>
    <string name="input_name">이름</string>
    <string name="input_name_search">이름 검색</string>
    <string name="input_number">연락처</string>
    <string name="get_user_from_phone_book">연락처</string>
    <string name="save">예약확정</string>
    <string name="cancel">취소</string>
    <string name="title">제목</string>
    <string name="date">날짜</string>
    <string name="date_select">날짜선택</string>
    <string name="time">시간</string>
    <string name="time_select">시간선택</string>
    <string name="description">메모</string>
    <string name="transition_add_person">add person</string>
    <string name="no_schedule">일정이 없습니다.</string>
    <string name="complete">완료</string>
    <string name="add_schedule">예약하기</string>
    <string name="add">일정 추가</string>
    <string name="check">확인</string>
    <string name="submit">등록</string>
    <string name="person_select">고객 선택</string>
    <string name="input_money">금액</string>
    <string name="content">예약내용</string>
    <string name="hand_care">손 케어</string>
    <string name="foot_care">발 케어</string>
    <string name="gel_nail">젤네일</string>
    <string name="gel_foot">젤페디</string>
    <string name="remove_gel">젤 제거</string>
    <string name="repair">보수</string>
    <string name="hold">홀드핀칭</string>
    <string name="etc">기타</string>
    <string name="sale">할인</string>
    <string name="today_sales">오늘 매출</string>
    <string name="member">회</string>
    <string name="non_member">비</string>
    <string name="day_sales">일일매출</string>
    <string name="month_sales">한달매출</string>
    <string name="weeks_sales">주간매출</string>
    <string name="card">카</string>
    <string name="card_sales">카드</string>
    <string name="cash">현</string>
    <string name="cash_sales">현금</string>
    <string name="money">\uFFE6</string>
    <string name="update_content">수정</string>
    <string name="cancel_content">삭제</string>
    <string name="apply">적용</string>
    <string name="time_09">AM 09</string>
    <string name="time_10">AM 10</string>
    <string name="time_11">AM 11</string>
    <string name="time_12">PM 12</string>
    <string name="time_13">PM 01</string>
    <string name="time_14">PM 02</string>
    <string name="time_15">PM 03</string>
    <string name="time_16">PM 04</string>
    <string name="time_17">PM 05</string>
    <string name="time_18">PM 06</string>
    <string name="time_19">PM 07</string>
    <string name="time_20">PM 08</string>
</resources>
