<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="submitViewModel"
            type="kr.ac.jejunu.rxpractice.ui.fragment.viewmodel.tabviewmodel.SalesSubmitVIewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/day_sales"
            android:onClick="@{() -> submitViewModel.onDayClick()}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            visibleContent="@{submitViewModel.isCheckDay}"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/button3">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="test" />

        </LinearLayout>

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/month_sales"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weeks_sales"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>
