<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bottom_sheet_dialog_fragment"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <Button
                android:id="@+id/button4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/drawer_sales"
                android:textColor="@color/colorYellow"
                android:background="@color/colorTransParent"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/divider"
                app:layout_constraintBottom_toTopOf="@+id/button5"
                app:layout_constraintTop_toBottomOf="@+id/button4" />

            <Button
                android:id="@+id/button5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_content"
                android:textColor="@color/colorYellow"
                android:background="@color/colorTransParent"
                app:layout_constraintBottom_toTopOf="@+id/view2"
                app:layout_constraintTop_toBottomOf="@+id/view"
                tools:layout_editor_absoluteX="0dp" />

            <View
                android:id="@+id/view2"
                android:layout_width="match_parent"
                android:layout_height="1.5dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/divider"
                app:layout_constraintBottom_toTopOf="@+id/button6"
                app:layout_constraintTop_toBottomOf="@+id/button5" />

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/cancel_content"
                android:textColor="@color/colorYellow"
                android:background="@color/colorTransParent"
                app:layout_constraintTop_toBottomOf="@+id/view2"
                tools:layout_editor_absoluteX="0dp" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/bottom_sheet_dialog_fragment"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout2">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorTransParent"
                android:text="@string/cancel"
                android:textColor="@color/colorYellow"/>

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
